--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -6,4 +6,20 @@
 <% @application.pets.each do |pet| %>
   <a href="/pets/<%=pet.id%>"><%=pet.name%> </a>
 <% end %>
-<h4>Status: </h4><%=@application.status%>
+<h4>Status: </h4><%=@application.status%><br/><br/>
+
+<%= form_with url: "/applications/#{@application.id}", method: :get, local: true do |f| %>
+  <%= f.label :search %>
+  <%= f.text_field :search %>
+  <%= f.submit "Search" %>
+<% end %>
+ 
+<% if @pets != nil %>
+  <% @pets.each do |pet| %>
+    <h3><%= pet.name %></h3>
+    <p>Age: <%= pet.age %></p>
+    <p>Breed: <%= pet.breed %></p>
+    <p>Adoptable: <%= pet.adoptable %></p>
+    <p>You can find <%= pet.name %> at <%= pet.shelter_name %>!</p>
+  <%end%>
+<% end %>
