--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -3,9 +3,11 @@
 <h4>Address: </h4><%=@application.address%>
 <h4>Description: </h4><%=@application.description%>
 <h4>Pets: </h4>
-<% @application.pets.each do |pet| %>
-  <a href="/pets/<%=pet.id%>"><%=pet.name%> </a><br/>
-<% end %>
+<div id="applications-pets">
+  <% @application.pets.each do |pet| %>
+    <a href="/pets/<%=pet.id%>"><%=pet.name%></a><br/>
+  <% end %>
+</div>
 <h4>Status: </h4><%=@application.status%><br/><br/>
 
 <%# <div id="search"> %>
