--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -1,35 +1,49 @@
 <h3>Application Number #<%=@application.id%></h3>
+
 <h4>Name: </h4><%=@application.name%>
 <h4>Address: </h4><%=@application.address%>
 <h4>Description: </h4><%=@application.description%>
+
 <h4>Pets: </h4>
 <div id="applications-pets">
   <% @application.pets.each do |pet| %>
     <a href="/pets/<%=pet.id%>"><%=pet.name%></a><br/>
   <% end %>
 </div>
+
 <h4>Status: </h4><%=@application.status%><br/><br/>
 
-<%# <div id="search"> %>
-  <%= form_with url: "/applications/#{@application.id}", method: :get, local: true do |f| %>
-    <%= f.label :search, "Add a Pet to this Application" %>
-    <%= f.text_field :search %>
-    <%= f.submit "Submit" %>
-  <% end %>
-<%# </div> %>
+<% if @application.status == "In Progress" %>
+    <%= form_with url: "/applications/#{@application.id}", method: :get, local: true do |f| %>
+      <%= f.label :search, "Add a Pet to this Application" %>
+      <%= f.text_field :search %>
+      <%= f.submit "Submit" %>
+    <% end %>
 
-<% if @pets != nil %>
-  <% @pets.each_with_index do |pet, index| %>
-    <div id="pet-<%=index%>">
-      <h3><%= pet.name %></h3>
-      <p>Age: <%= pet.age %></p>
-      <p>Breed: <%= pet.breed %></p>
-      <p>Adoptable: <%= pet.adoptable %></p>
-      <p>You can find <%= pet.name %> at <%= pet.shelter_name %>!</p>
-      <form action="/applications/<%=@application.id%>">
-        <input type="hidden" id="pet" name="pet" value="<%= pet.id %>" />
-        <input type="submit" value="Adopt this Pet">
-      </form>
-    </div>
-  <%end%>
+  <% if @pets != nil %>
+    <% @pets.each_with_index do |pet, index| %>
+      <div id="pet-<%=index%>">
+        <h3><%= pet.name %></h3>
+        <p>Age: <%= pet.age %></p>
+        <p>Breed: <%= pet.breed %></p>
+        <p>Adoptable: <%= pet.adoptable %></p>
+        <p>You can find <%= pet.name %> at <%= pet.shelter_name %>!</p>
+        
+        <form action="/applications/<%=@application.id%>">
+          <input type="hidden" id="pet" name="pet" value="<%= pet.id %>" />
+          <input type="submit" value="Adopt this Pet">
+        </form>
+      </div>
+
+    <% end %>
+  <% end %>
+
+  <% if @application.pets != nil %>
+    <h3>Submit Your Application</h3>
+    <p>Please enter why you think you'd make a good owner:</p>
+    <%= form_with url: "/applications/#{@application.id}", method: :patch, local: true do |f| %>
+      <%= f.text_area :description, size: '50x5'%><br/>
+      <%= f.submit "Submit Application" %>
+    <% end %>
+  <% end %>
 <% end %>
