Feat: add pending application section to admin

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -3,3 +3,11 @@
     <p><%=shelter.name%></p>
   </div>
 <% end %>
+
+<h3>Shelters with Pending Applications</h3>
+
+<div id="pending">
+  <% @pendings.each do |shelter| %>
+    <p><%= shelter.name %></p>
+  <% end %>
+</div>
