Feat: add approve/reject application

--- a/app/views/admin_applications/show.html.erb
+++ b/app/views/admin_applications/show.html.erb
@@ -1,3 +1,5 @@
+<h4 id="status">Status: <%= @application.status %></h4>
+
 <% @pets.each_with_index do |pet, index| %>
   <div id="pet-<%= index %>">
     <%= pet.name %>:
