Feat: add number of adopted pets to shelter show

--- a/app/views/admin_shelters/show.html.erb
+++ b/app/views/admin_shelters/show.html.erb
@@ -8,3 +8,4 @@
   Average age of pets: 0
 <% end %>
 Number of adoptable pets: <%= @shelter.adoptable_pets.count %>
+Number of adopted pets: <%= @shelter.adopted_pets_count %>
